# tribals-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  background.js  cleanup_sniper.py  config.yaml  content-base.js  create_project_files.py  main.py  manifest.json  popup.html  popup.js  requirements.txt  setup.py  test_dashboard.py  update_externals.js  update_externals.sh
scripts/: auto_buyer.js  auto_buyer_v2.js  auto_farmer.js  auto_farmer_v2.js  auto_scavenger.js  auto_scavenger_v2.js
sniper/: Cargo.toml  rebuild_and_start.sh  restart_sniper.py
sniper/src/: attack.rs  main.rs  session.rs  sniper.rs
src/: __init__.py
src/automations/: __init__.py  auto_buyer.py  auto_farmer.py  auto_scavenger.py  auto_sniper.py
src/browser_extensions/: sniper_interface.js
src/captcha/: __init__.py  detector.py  solver.py  solver_fallback.py
src/core/: base_automation.py  browser_manager.py  config_manager.py  login_handler.py  scheduler.py
src/dashboard/: server.py
src/dashboard/static/: index.html
src/sniper/: __init__.py  client.py  manager.py
src/utils/: __init__.py  anti_detection.py  discord_webhook.py  helpers.py  logger.py  screenshot_cleanup.py  screenshot_manager.py
tampermonkey_scripts/: auto_buyer.js  auto_farmer.js  auto_scavenger.js
