[package]
name = "tribals-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "time"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.5"